test/e2e/testdata/envoygateway/app-root.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  annotations:
    gateway.networking.k8s.io/generator: ingress2eg-dev
  name: nginx
  namespace: ingress2eg
spec:
  gatewayClassName: eg
  listeners:
  - hostname: approot.example.com
    name: approot-example-com-http
    port: 80
    protocol: HTTP
status: {}
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    gateway.networking.k8s.io/generator: ingress2eg-dev
  name: app-root-approot-example-com
  namespace: ingress2eg
spec:
  hostnames:
  - approot.example.com
  parentRefs:
  - name: nginx
  rules:
  - backendRefs:
    - name: echo-server
      port: 8080
    matches:
    - path:
        type: PathPrefix
        value: /
    name: rule-0-prefix-root
  - filters:
    - requestRedirect:
        hostname: approot.example.com
        path:
          replaceFullPath: /app
          type: ReplaceFullPath
        scheme: http
        statusCode: 302
      type: RequestRedirect
    matches:
    - path:
        type: Exact
        value: /
    name: rule-for-app-root-redirect
status:
  parents: []
