test/e2e/testdata/envoygateway/auth-tls-secret.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  annotations:
    gateway.networking.k8s.io/generator: ingress2eg-dev
  name: nginx
  namespace: ingress2eg
spec:
  gatewayClassName: eg
  listeners:
  - hostname: mtls.example.com
    name: mtls-example-com-http
    port: 80
    protocol: HTTP
  - hostname: mtls.example.com
    name: mtls-example-com-https
    port: 443
    protocol: HTTPS
    tls:
      certificateRefs:
      - group: null
        kind: null
        name: tls-secret
status: {}
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    gateway.networking.k8s.io/generator: ingress2eg-dev
  name: auth-tls-mtls-example-com
  namespace: ingress2eg
spec:
  hostnames:
  - mtls.example.com
  parentRefs:
  - name: nginx
  rules:
  - backendRefs:
    - name: echo-server
      port: 8080
    matches:
    - path:
        type: PathPrefix
        value: /secure
    name: rule-0-prefix-secure
status:
  parents: []
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: ClientTrafficPolicy
metadata:
  annotations:
    gateway.networking.k8s.io/generator: ingress2eg-dev
  name: nginx-1
  namespace: ingress2eg
spec:
  targetRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: nginx
    sectionName: mtls-example-com-https
  tls:
    clientValidation:
      caCertificateRefs:
      - group: ""
        kind: Secret
        name: ca-secret
        namespace: ingress2eg
status:
  ancestors: null
