test/e2e/testdata/envoygateway/basic-auth.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  annotations:
    gateway.networking.k8s.io/generator: ingress2eg-dev
  name: nginx
  namespace: ingress2eg
spec:
  gatewayClassName: eg
  listeners:
  - hostname: foo.bar.com
    name: foo-bar-com-http
    port: 80
    protocol: HTTP
status: {}
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    gateway.networking.k8s.io/generator: ingress2eg-dev
  name: basic-auth-foo-bar-com
  namespace: ingress2eg
spec:
  hostnames:
  - foo.bar.com
  parentRefs:
  - name: nginx
  rules:
  - backendRefs:
    - name: echo-server
      port: 8080
    matches:
    - path:
        type: PathPrefix
        value: /basic
    name: rule-0-prefix-basic
status:
  parents: []
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  annotations:
    gateway.networking.k8s.io/generator: ingress2eg-dev
  name: basic-auth-foo-bar-com
  namespace: ingress2eg
spec:
  basicAuth:
    users:
      group: ""
      kind: Secret
      name: eg-basic-auth
      namespace: ingress2eg
  targetRefs:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    name: basic-auth-foo-bar-com
status:
  ancestors: null
