test/e2e/testdata/envoygateway/canary.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  annotations:
    gateway.networking.k8s.io/generator: ingress2eg-dev
  name: nginx
  namespace: ingress2eg
spec:
  gatewayClassName: eg
  listeners:
  - hostname: canary.example.com
    name: canary-example-com-http
    port: 80
    protocol: HTTP
  - hostname: canary-weight.example.com
    name: canary-weight-example-com-http
    port: 80
    protocol: HTTP
status: {}
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    gateway.networking.k8s.io/generator: ingress2eg-dev
  name: canary-by-weight-canary-weight-example-com
  namespace: ingress2eg
spec:
  hostnames:
  - canary-weight.example.com
  parentRefs:
  - name: nginx
  rules:
  - backendRefs:
    - name: echo-server
      port: 8080
      weight: 70
    - name: echo-server-canary
      port: 8080
      weight: 30
    matches:
    - path:
        type: PathPrefix
        value: /
    name: rule-0-prefix-root
status:
  parents: []
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    gateway.networking.k8s.io/generator: ingress2eg-dev
  name: canary-by-header-canary-example-com
  namespace: ingress2eg
spec:
  hostnames:
  - canary.example.com
  parentRefs:
  - name: nginx
  rules:
  - backendRefs:
    - name: echo-server-canary
      port: 8080
    matches:
    - headers:
      - name: X-Canary
        type: Exact
        value: always
      path:
        type: PathPrefix
        value: /
    name: rule-0-prefix-root-canary-header
  - backendRefs:
    - name: echo-server
      port: 8080
    - name: echo-server-canary
      port: 8080
    matches:
    - path:
        type: PathPrefix
        value: /
    name: rule-0-prefix-root
status:
  parents: []
