test/e2e/testdata/envoygateway/external-auth.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  annotations:
    gateway.networking.k8s.io/generator: ingress2eg-dev
  name: nginx
  namespace: ingress2eg
spec:
  gatewayClassName: eg
  listeners:
  - hostname: foo.bar.com
    name: foo-bar-com-http
    port: 80
    protocol: HTTP
status: {}
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    gateway.networking.k8s.io/generator: ingress2eg-dev
  name: external-auth-foo-bar-com
  namespace: ingress2eg
spec:
  hostnames:
  - foo.bar.com
  parentRefs:
  - name: nginx
  rules:
  - backendRefs:
    - name: echo-server
      port: 8080
    matches:
    - path:
        type: PathPrefix
        value: /external
    name: rule-0-prefix-external
status:
  parents: []
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  annotations:
    gateway.networking.k8s.io/generator: ingress2eg-dev
  name: external-auth-foo-bar-com
  namespace: ingress2eg
spec:
  extAuth:
    http:
      backendRefs:
      - group: ""
        kind: Service
        name: ext-authz
        namespace: ingress2eg
        port: 9002
      headersToBackend:
      - x-current-user
      path: /
  targetRefs:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    name: external-auth-foo-bar-com
status:
  ancestors: null
