test/e2e/testdata/envoygateway/ip-access-control.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  annotations:
    gateway.networking.k8s.io/generator: ingress2eg-dev
  name: nginx
  namespace: ingress2eg
spec:
  gatewayClassName: eg
  listeners:
  - hostname: denylist-block.example.com
    name: denylist-block-example-com-http
    port: 80
    protocol: HTTP
  - hostname: whitelist-allow.example.com
    name: whitelist-allow-example-com-http
    port: 80
    protocol: HTTP
  - hostname: whitelist-deny.example.com
    name: whitelist-deny-example-com-http
    port: 80
    protocol: HTTP
status: {}
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    gateway.networking.k8s.io/generator: ingress2eg-dev
  name: denylist-block-denylist-block-example-com
  namespace: ingress2eg
spec:
  hostnames:
  - denylist-block.example.com
  parentRefs:
  - name: nginx
  rules:
  - backendRefs:
    - name: echo-server
      port: 8080
    matches:
    - path:
        type: PathPrefix
        value: /
    name: rule-0-prefix-root
status:
  parents: []
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    gateway.networking.k8s.io/generator: ingress2eg-dev
  name: whitelist-allow-whitelist-allow-example-com
  namespace: ingress2eg
spec:
  hostnames:
  - whitelist-allow.example.com
  parentRefs:
  - name: nginx
  rules:
  - backendRefs:
    - name: echo-server
      port: 8080
    matches:
    - path:
        type: PathPrefix
        value: /
    name: rule-0-prefix-root
status:
  parents: []
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    gateway.networking.k8s.io/generator: ingress2eg-dev
  name: whitelist-deny-whitelist-deny-example-com
  namespace: ingress2eg
spec:
  hostnames:
  - whitelist-deny.example.com
  parentRefs:
  - name: nginx
  rules:
  - backendRefs:
    - name: echo-server
      port: 8080
    matches:
    - path:
        type: PathPrefix
        value: /
    name: rule-0-prefix-root
status:
  parents: []
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  annotations:
    gateway.networking.k8s.io/generator: ingress2eg-dev
  name: whitelist-deny-whitelist-deny-example-com
  namespace: ingress2eg
spec:
  authorization:
    defaultAction: Deny
    rules:
    - action: Allow
      principal:
        clientCIDRs:
        - 192.0.2.0/24
  targetRefs:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    name: whitelist-deny-whitelist-deny-example-com
status:
  ancestors: null
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  annotations:
    gateway.networking.k8s.io/generator: ingress2eg-dev
  name: denylist-block-denylist-block-example-com
  namespace: ingress2eg
spec:
  authorization:
    defaultAction: Allow
    rules:
    - action: Deny
      principal:
        clientCIDRs:
        - 192.0.2.0/24
  targetRefs:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    name: denylist-block-denylist-block-example-com
status:
  ancestors: null
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  annotations:
    gateway.networking.k8s.io/generator: ingress2eg-dev
  name: whitelist-allow-whitelist-allow-example-com
  namespace: ingress2eg
spec:
  authorization:
    defaultAction: Deny
    rules:
    - action: Allow
      principal:
        clientCIDRs:
        - 0.0.0.0/0
  targetRefs:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    name: whitelist-allow-whitelist-allow-example-com
status:
  ancestors: null
