test/e2e/testdata/envoygateway/proxy-body-size.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  annotations:
    gateway.networking.k8s.io/generator: ingress2eg-dev
  name: nginx
  namespace: ingress2eg
spec:
  gatewayClassName: eg
  listeners:
  - hostname: body-size.example.com
    name: body-size-example-com-http
    port: 80
    protocol: HTTP
status: {}
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    gateway.networking.k8s.io/generator: ingress2eg-dev
  name: proxy-body-size-body-size-example-com
  namespace: ingress2eg
spec:
  hostnames:
  - body-size.example.com
  parentRefs:
  - name: nginx
  rules:
  - backendRefs:
    - name: echo-server
      port: 8080
    matches:
    - path:
        type: PathPrefix
        value: /
    name: rule-0-prefix-root
status:
  parents: []
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: BackendTrafficPolicy
metadata:
  annotations:
    gateway.networking.k8s.io/generator: ingress2eg-dev
  name: proxy-body-size-body-size-example-com
  namespace: ingress2eg
spec:
  requestBuffer:
    limit: 1k
  targetRefs:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    name: proxy-body-size-body-size-example-com
status:
  ancestors: null
