test/e2e/testdata/envoygateway/proxy-connect-timeout.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  annotations:
    gateway.networking.k8s.io/generator: ingress2eg-dev
  name: nginx
  namespace: ingress2eg
spec:
  gatewayClassName: eg
  listeners:
  - hostname: timeout.example.com
    name: timeout-example-com-http
    port: 80
    protocol: HTTP
status: {}
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    gateway.networking.k8s.io/generator: ingress2eg-dev
  name: proxy-timeout-timeout-example-com
  namespace: ingress2eg
spec:
  hostnames:
  - timeout.example.com
  parentRefs:
  - name: nginx
  rules:
  - backendRefs:
    - name: slow-backend
      port: 8080
    matches:
    - path:
        type: PathPrefix
        value: /timeout
    name: rule-0-prefix-timeout
  - backendRefs:
    - name: echo-server
      port: 8080
    matches:
    - path:
        type: PathPrefix
        value: /normal
    name: rule-1-prefix-normal
status:
  parents: []
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: BackendTrafficPolicy
metadata:
  annotations:
    gateway.networking.k8s.io/generator: ingress2eg-dev
  name: proxy-timeout-timeout-example-com
  namespace: ingress2eg
spec:
  targetRefs:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    name: proxy-timeout-timeout-example-com
  timeout:
    tcp:
      connectTimeout: 2s
status:
  ancestors: null
