test/e2e/testdata/envoygateway/proxy-ssl.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  annotations:
    gateway.networking.k8s.io/generator: ingress2eg-dev
  name: nginx
  namespace: ingress2eg
spec:
  gatewayClassName: eg
  listeners:
  - hostname: proxy-ssl.example.com
    name: proxy-ssl-example-com-http
    port: 80
    protocol: HTTP
status: {}
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    gateway.networking.k8s.io/generator: ingress2eg-dev
  name: proxy-ssl-proxy-ssl-example-com
  namespace: ingress2eg
spec:
  hostnames:
  - proxy-ssl.example.com
  parentRefs:
  - name: nginx
  rules:
  - backendRefs:
    - group: gateway.envoyproxy.io
      kind: Backend
      name: proxy-ssl-proxy-ssl-example-com-nginx-tls
    matches:
    - path:
        type: PathPrefix
        value: /
    name: rule-0-prefix-root
status:
  parents: []
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: Backend
metadata:
  annotations:
    gateway.networking.k8s.io/generator: ingress2eg-dev
  name: proxy-ssl-proxy-ssl-example-com-nginx-tls
  namespace: ingress2eg
spec:
  endpoints:
  - fqdn:
      hostname: nginx-tls.ingress2eg.svc.cluster.local
      port: 8443
  tls:
    caCertificateRefs:
    - group: ""
      kind: Secret
      name: backend-client-cert
    clientCertificateRef:
      group: ""
      kind: Secret
      name: backend-client-cert
      namespace: ingress2eg
    insecureSkipVerify: false
    sni: nginx-tls.ingress2eg.svc.cluster.local
status: {}
