test/e2e/testdata/envoygateway/rate-limit.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  annotations:
    gateway.networking.k8s.io/generator: ingress2eg-dev
  name: nginx
  namespace: ingress2eg
spec:
  gatewayClassName: eg
  listeners:
  - hostname: rpm.example.com
    name: rpm-example-com-http
    port: 80
    protocol: HTTP
  - hostname: rps.example.com
    name: rps-example-com-http
    port: 80
    protocol: HTTP
status: {}
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    gateway.networking.k8s.io/generator: ingress2eg-dev
  name: rate-limit-rpm-rpm-example-com
  namespace: ingress2eg
spec:
  hostnames:
  - rpm.example.com
  parentRefs:
  - name: nginx
  rules:
  - backendRefs:
    - name: echo-server
      port: 8080
    matches:
    - path:
        type: PathPrefix
        value: /
    name: rule-0-prefix-root
status:
  parents: []
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    gateway.networking.k8s.io/generator: ingress2eg-dev
  name: rate-limit-rps-rps-example-com
  namespace: ingress2eg
spec:
  hostnames:
  - rps.example.com
  parentRefs:
  - name: nginx
  rules:
  - backendRefs:
    - name: echo-server
      port: 8080
    matches:
    - path:
        type: PathPrefix
        value: /
    name: rule-0-prefix-root
status:
  parents: []
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: BackendTrafficPolicy
metadata:
  annotations:
    gateway.networking.k8s.io/generator: ingress2eg-dev
  name: rate-limit-rps-rps-example-com
  namespace: ingress2eg
spec:
  rateLimit:
    local:
      rules:
      - clientSelectors:
        - sourceCIDR:
            type: Distinct
            value: 0.0.0.0/0
        limit:
          requests: 2
          unit: Second
  targetRefs:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    name: rate-limit-rps-rps-example-com
status:
  ancestors: null
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: BackendTrafficPolicy
metadata:
  annotations:
    gateway.networking.k8s.io/generator: ingress2eg-dev
  name: rate-limit-rpm-rpm-example-com
  namespace: ingress2eg
spec:
  rateLimit:
    local:
      rules:
      - clientSelectors:
        - sourceCIDR:
            type: Distinct
            value: 0.0.0.0/0
        limit:
          requests: 2
          unit: Minute
  targetRefs:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    name: rate-limit-rpm-rpm-example-com
status:
  ancestors: null
