test/e2e/testdata/envoygateway/ssl-passthrough.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  annotations:
    gateway.networking.k8s.io/generator: ingress2eg-dev
  name: nginx
  namespace: ingress2eg
spec:
  gatewayClassName: eg
  listeners:
  - hostname: passthrough.example.com
    name: passthrough-example-com-http
    port: 80
    protocol: HTTP
  - allowedRoutes:
      kinds:
      - group: gateway.networking.k8s.io
        kind: TLSRoute
      namespaces:
        from: Same
    hostname: passthrough.example.com
    name: passthrough-example-com-tls
    port: 443
    protocol: TLS
    tls:
      mode: Passthrough
status: {}
---
apiVersion: gateway.networking.k8s.io/v1alpha3
kind: TLSRoute
metadata:
  annotations:
    gateway.networking.k8s.io/generator: ingress2eg-dev
  name: ssl-passthrough-passthrough-example-com
  namespace: ingress2eg
spec:
  hostnames:
  - passthrough.example.com
  parentRefs:
  - name: nginx
    sectionName: passthrough-example-com-tls
  rules:
  - backendRefs:
    - name: nginx-tls
      port: 8443
    name: rule-0-prefix-root
status:
  parents: null
